// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.proxy";
option java_outer_classname = "FarmProto";

package proxy;

// Interface exported by the server.
service Farm {
    // A simple rpc
    rpc GetFarmMessage (VMSDataRequest) returns (VMSDataResponse) {}
    // Two  server-to-client streaming rpc
    rpc ListFarmMessageBySmallWrapper (RequestWrapperSmall) returns (stream VMSDataResponse) {}
    // A client-to-server streaming rpc
    rpc GetFarmsSummaryMessage(stream Item) returns (FarmsSummary) {}
    // A Bidirectional streaming rpc
    rpc FarmChat(stream ItemNote) returns (stream ItemNote) {}
}

message VMSDataRequest {
    Item item = 1;
}
message VMSDataResponse {
    Item item = 1;
}

message RequestWrapperSmall {
    VMSDataRequest req1 = 1;
}

message Item {
    string guid= 1;
    string owner= 2;
    int32 messagetype= 3;
    int32 sourceid= 4;
}

message FarmsSummary {
    // The number of requests received.
    int32 VMSDataRequest_count = 1;
}

message ItemNote {
    // The farm from which the message is sent.
    Item item = 1;

    // The message to be sent.
    string message = 2;
}

message VMSDatabase {
    repeated VMSDataResponse response = 1;
}



